# aurders

./: Cargo.toml  LICENSE  README.md
src/: args.rs  final_step.rs  main.rs  pkgbuild.rs  shared.rs  srcinfo.rs  utils.rs
src/git/: mod.rs
src/pkgbuild/: mod.rs  pkgbuild.rs  structure.rs  user_input.rs  utils.rs
src/srcinfo/: mod.rs
templates/: PKGBUILD  SRCINFO
