[package]
name = "aurders"
description = "Simple tool to generate PKGBUILD and more"
authors = ["Mitesh H. Soni <smiteshhc@gmail.com>"]
version = "2.0.0"
edition = "2021"
license = "MIT"
keywords = ["utility", "cli", "aur", "arch"]
readme = "README.md"
repository = "https://github.com/mithcs/aurders"

[dependencies]
inquire = { version = "0.7.5", features = ["editor"] }
minreq = { version = "2.12.0", features = ["https"] }
sha2 = "0.10.8"
